# ckb-token

./: .gitignore  Cargo.toml  Makefile  README.md  hashes.txt  lumos_config.json  pnpm-workspace.yaml
contracts/.cargo/: config.toml
contracts/owner-lock-script/: Cargo.toml
contracts/owner-lock-script/src/: error.rs  main.rs
contracts/tests/: Cargo.toml
contracts/tests/src/: mock_utils.rs  xudt_tests.rs
contracts/xudt-type-script/: Cargo.toml
contracts/xudt-type-script/src/: error.rs  main.rs  validator.rs
devenv/: ckb-miner.toml  ckb.toml  docker-compose.yml
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CommandHeader.tsx  DeploymentGrid.tsx  HeroSection.tsx  LiveControlSurface.tsx
mcp-sdk/: package.json
mcp-sdk/src/: client.ts  index.ts
mcp-sdk/src/tools/: balance.ts  burn.ts  deploy.ts  mint.ts  transfer.ts
mcp-sdk/src/types/: cell.ts  script.ts  transaction.ts
mcp-sdk/src/utils/: capacity.ts  codec.ts  hash.ts  keystore.ts
scripts/: check-balance.ts  check_current_sync.ts  check_deploy_tx.ts  check_faucet_tx.ts  check_lumos.js  check_testing_balance.ts  check_user_balance.ts  create-token.ts  deploy.ts  deployment_output.txt  deployment_results.json  fetch_recent_txs.ts  final_deploy.txt  final_hashes.txt  find_udts.ts  get_hashes.ts  get_real_hash.ts  list_cells.ts  mint-token.ts  mint_to_joyid.ts  owner_lock_hash.txt  package.json  transfer_to_user.ts
scripts/archive/: check_live_cell.ts  check_tx.ts  redeploy_binary.ts  transfer-token.ts  verify_deploy.ts
